@@ -6,4 +6,8 @@
   Gentoo virtual package for the Basic Linear Algebra Subprograms
   C implementation.
 </longdescription>
+<use>
+  <flag name="int64">Add eselect module for cblas libraries built with 64 bits
+  integer ABI</flag>
+</use>
 </pkgmetadata>
